updated master start point, Add Com port and fix cobolt connectivity bugs, support new experiments, ...

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@
 *.svn-base
 *.pyc
 *.pyc
+map_config.txt
+OPX_params.xml
+HotSystem/SystemConfig/xml_configs/system_info.xml.femto_cobolt
+HotSystem/SystemConfig/xml_configs/system_info.xml.hotsystem
