update ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ map_config.txt
 OPX_params.xml
 HotSystem/SystemConfig/xml_configs/system_info.xml.femto_cobolt
 HotSystem/SystemConfig/xml_configs/system_info.xml.hotsystem
+fileName.png
