--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@ OPX_params.xml
 HotSystem/SystemConfig/xml_configs/system_info.xml.femto_cobolt
 HotSystem/SystemConfig/xml_configs/system_info.xml.hotsystem
 fileName.png
+Sample_map.png
+saved_plot.png
+HotSystem/SystemConfig/xml_configs/system_info.xml
+HotSystem/SystemConfig/xml_configs/system_info.xml
